Improve mobile styling, fix distorted faces

--- a/scss/components/_buttons.scss
+++ b/scss/components/_buttons.scss
@@ -63,5 +63,4 @@
   font-family: $brand-font, 'Arial', sans-serif;
   font-size: 20px;
   color: transparentize($blue, .3);
-  box-sizing: border-box;
 }
