--- a/scss/components/_card.scss
+++ b/scss/components/_card.scss
@@ -256,7 +256,6 @@
   width: 30px;
   height: 30px;
   margin-right: 10px;
-  box-sizing: border-box;
   padding: 5px;
   border-radius: 100%;
   border: 1px solid #ED2332;
