--- a/scss/components/_dashboard.scss
+++ b/scss/components/_dashboard.scss
@@ -192,12 +192,20 @@ header.logo {
   align-items: center;
   margin-left: 30px;
   margin-right: 15px;
-  box-sizing: border-box;
   border-radius: 8px;
   padding: 10px 15px;
   cursor: pointer;
   transition: box-shadow 0.1s linear;
   @include card-shadow;
+
+  @include max-width($tablet) {
+    margin-left: 25px;
+  }
+
+  @include max-width($phone) {
+    margin-left: 20px;
+    margin-right: 10px;
+  }
 }
 
 .rep-info-headshot {
@@ -206,6 +214,18 @@ header.logo {
   width: 80px;
   height: 80px;
   border-radius: 100%;
+  flex: 0 0 80px;
+
+  @include max-width($tablet) {
+    height: 70px;
+    flex: 0 0 70px;
+  }
+
+  @include max-width($phone) {
+    margin-left: -25px;
+    height: 60px;
+    flex: 0 0 60px;
+  }
 }
 
 .rep-info-details {
@@ -220,22 +240,43 @@ header.logo {
 
 .rep-info-name {
   color: $blue;
+  font-family: $brand-font;
   font-weight: 700;
+  font-size: 1rem;
   margin: 0;
+  text-align: left;
+
+  @include max-width($phone) {
+    font-size: 14px;
+  }
 }
 
 .rep-info-role {
   margin: 0;
   font-weight: 300;
   font-size: 16px;
+
+  @include max-width($phone) {
+    font-size: 13px;
+  }
 }
 
 .rep-letter-grade-wrap {
-  width: 60px;
   height: 60px;
+  flex: 0 0 60px;
   border-radius: 100%;
   transform: rotate(-12deg);
   position: relative;
+
+  @include max-width($tablet) {
+    height: 50px;
+    flex: 0 0 50px;
+  }
+
+  @include max-width($phone) {
+    height: 45px;
+    flex: 0 0 45px;
+  }
 }
 
 .rep-letter-grade {
@@ -250,4 +291,8 @@ header.logo {
   align-items: center;
   justify-content: center;
   font-family: $header-font;
+
+  @include max-width($phone) {
+    font-size: 18px;
+  }
 }
