--- a/scss/components/_login.scss
+++ b/scss/components/_login.scss
@@ -8,7 +8,6 @@
   width: 100%;
   height: auto;
   padding: 20px;
-  box-sizing: border-box;
   position: relative;
 }
 
