--- a/scss/utils/_variables.scss
+++ b/scss/utils/_variables.scss
@@ -45,7 +45,8 @@ $z-modal-overlay: 400;
 }
 
 // BREAKPOINTS
-$phone: 320px;
+$phone: 360px;
+$phablet: 480px;
 $tablet: 768px;
 $desktop: 1024px;
 $large: 1300px;
